Working QR code, Half of css

--- a/client/src/css/font-awesome.css
+++ b/client/src/css/font-awesome.css
@@ -275,7 +275,8 @@
   content: "\f01e";
 }
 .fa-refresh:before {
-  content: "\f021";
+  /* content: "\f021"; */
+  content: "\267B";
 }
 .fa-list-alt:before {
   content: "\f022";
