--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -41,6 +41,11 @@
 
 /* Cole Added CSS */
 
+i {
+	font-size: 30px;
+	size: 30px;
+}
+
 
 :root {
   --blue: #2A9FD6;
@@ -100,7 +105,8 @@ body {
   /* color: #ADAFAE; */
   color: #FFFFFF; 
   text-align: left;
-  background-color: #060606;
+  /* background-color: #060606; */
+  background-color: #90EE90;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -119,42 +125,59 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0.5rem;
 }
 
-p {
+p, label {
+	font-size: 1.5rem;
   margin-top: 0;
   margin-bottom: 1rem;
 }
 
+#me {
+	background-color: #FFFFFF;
+	color: #00FF00;
+	border-radius: 2.5rem;
+}
 
+h1 {
+	font-size: 10em;
+}
+h3 {
+	font-size: 3em;
+}
 
+.Login {
+	align: left;
+}
 
 
 
 
 button {
-  color: #fff;
-  background-color: #2A9FD6;
-  border-color: #2A9FD6;
+  color: white;
+  background-color: #90EE90;
+  border-color: #white;
+  border-radius: 0.5rem;
+  
 }
 
 button:hover {
   color: #fff;
-  background-color: #2387b7;
-  border-color: #2180ac;
+  background-color: #00FF00;
+  border-color: white;
 }
 
 button:focus, button.focus {
   color: #fff;
-  background-color: #2387b7;
-  border-color: #2180ac;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(74, 173, 220, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(74, 173, 220, 0.5);
+  background-color: #90EE90;
+  border-color: #90EE79;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 255, 0, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(0, 255, 0, 0.5);
 }
 
 button {
   display: inline-block;
   font-weight: 400;
   /* color: #ADAFAE; */
-  color: #FFFFFF;
+  color: #90EE90;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
@@ -162,15 +185,16 @@ button {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  background-color: transparent;
+  background-color: white;
   /* border: 1px solid transparent; */
-  border: 1px solid white;
+  border: 3px solid white;
   margin: 0.5em;
   
   padding: 0.375rem 1rem;
-  font-size: 0.875rem;
+  /* font-size: 0.875rem; */
+  font-size: 1.5rem;
   line-height: 1.5;
-  border-radius: 0.25rem;
+  border-radius: 0.5rem;
   -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -184,6 +208,8 @@ button {
   }
 }
 
+/* CSS for text box*/
+
 .form-control {
   display: block;
   width: 100%;
@@ -193,33 +219,55 @@ button {
   font-weight: 400;
   line-height: 1.5;
   /* color: #282828; */
-  color: #FFFFFF;
+  color: #000000;
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #fff;
-  border-radius: 0.25rem;
+  border-radius: 0.5rem;
   -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  
 }
 
-@media (prefers-reduced-motion: reduce) {
-  .form-control {
-    -webkit-transition: none;
-    transition: none;
-  }
+.form-control2 {
+  display: block;
+  width: 55%;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 1rem;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.5;
+  /* color: #282828; */
+  color: #000000;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #fff;
+  border-radius: 0.5rem;
+  -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  /* margin-left: 35em; */
+  
 }
+/* @media (prefers-reduced-motion: reduce) { */
+  /* .form-control { */
+    /* -webkit-transition: none; */
+    /* transition: none; */
+  /* } */
+/* } */
 
-.form-control::-ms-expand {
-  background-color: transparent;
-  border: 0;
-}
+/* .form-control::-ms-expand { */
+  /* background-color: transparent; */
+  /* border: 0; */
+/* } */
 
-.form-control:-moz-focusring {
-  color: transparent;
-  text-shadow: 0 0 0 #282828;
-}
+/* .form-control:-moz-focusring { */
+  /* color: transparent; */
+  /* text-shadow: 0 0 0 #282828; */
+/* } */
 
 .form-control:focus {
   color: #282828;
@@ -230,30 +278,39 @@ button {
           box-shadow: 0 0 0 0.2rem rgba(42, 159, 214, 0.25);
 }
 
-.form-control::-webkit-input-placeholder {
-  color: #555;
-  opacity: 1;
-}
-
-.form-control::-ms-input-placeholder {
-  color: #555;
-  opacity: 1;
-}
-
-.form-control::placeholder {
-  color: #555;
-  opacity: 1;
-}
-
-.form-control:disabled, .form-control[readonly] {
-  background-color: #ADAFAE;
-  opacity: 1;
-}
-
-select.form-control:focus::-ms-value {
+.form-control2:focus {
   color: #282828;
   background-color: #fff;
+  border-color: #95cfeb;
+  outline: 0;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(42, 159, 214, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(42, 159, 214, 0.25);
 }
+
+/* .form-control::-webkit-input-placeholder { */
+  /* color: #555; */
+  /* opacity: 1; */
+/* } */
+
+/* .form-control::-ms-input-placeholder { */
+  /* color: #555; */
+  /* opacity: 1; */
+/* } */
+
+/* .form-control::placeholder { */
+  /* color: #555; */
+  /* opacity: 1; */
+/* } */
+
+/* .form-control:disabled, .form-control[readonly] { */
+  /* background-color: #ADAFAE; */
+  /* opacity: 1; */
+/* } */
+
+/* select.form-control:focus::-ms-value { */
+  /* color: #282828; */
+  /* background-color: #fff; */
+/* } */
 a, p {
 	font-size: 1.5rem;
 	color: #FFFFFF;
@@ -261,7 +318,7 @@ a, p {
 
 
 
-
+/* CSS for radio buttons */
 
 
 .custom-control-input {
