--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -41,12 +41,6 @@
 
 /* Cole Added CSS */
 
-i {
-	font-size: 30px;
-	size: 30px;
-}
-
-
 :root {
   --blue: #2A9FD6;
   --indigo: #6610f2;
@@ -102,10 +96,8 @@ body {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.5;
-  /* color: #ADAFAE; */
   color: #FFFFFF; 
   text-align: left;
-  /* background-color: #060606; */
   background-color: #90EE90;
 }
 
@@ -118,6 +110,8 @@ hr {
           box-sizing: content-box;
   height: 0;
   overflow: visible;
+  color: #00FF00;
+  
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -125,10 +119,14 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0.5rem;
 }
 
-p, label {
-	font-size: 1.5rem;
+a, p, label {
+  font-size: 1.5rem;
   margin-top: 0;
   margin-bottom: 1rem;
+  color: #FFFFFF;
+}
+a {
+	font-size: 1.75rem;
 }
 
 #me {
@@ -142,22 +140,10 @@ h1 {
 }
 h3 {
 	font-size: 3em;
+	text-align: center;
 }
 
-.Login {
-	align: left;
-}
-
-
-
-
-button {
-  color: white;
-  background-color: #90EE90;
-  border-color: #white;
-  border-radius: 0.5rem;
-  
-}
+/* Css for Button */
 
 button:hover {
   color: #fff;
@@ -176,7 +162,6 @@ button:focus, button.focus {
 button {
   display: inline-block;
   font-weight: 400;
-  /* color: #ADAFAE; */
   color: #90EE90;
   text-align: center;
   vertical-align: middle;
@@ -186,12 +171,11 @@ button {
       -ms-user-select: none;
           user-select: none;
   background-color: white;
-  /* border: 1px solid transparent; */
-  border: 3px solid white;
-  margin: 0.5em;
+  border: 1px solid white;
+  margin-bottom: 0.5em;
+  margin-right: 0.5em;
   
   padding: 0.375rem 1rem;
-  /* font-size: 0.875rem; */
   font-size: 1.5rem;
   line-height: 1.5;
   border-radius: 0.5rem;
@@ -206,188 +190,4 @@ button {
     -webkit-transition: none;
     transition: none;
   }
-}
-
-/* CSS for text box*/
-
-.form-control {
-  display: block;
-  width: 100%;
-  height: calc(1.5em + 0.75rem + 2px);
-  padding: 0.375rem 1rem;
-  font-size: 0.875rem;
-  font-weight: 400;
-  line-height: 1.5;
-  /* color: #282828; */
-  color: #000000;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #fff;
-  border-radius: 0.5rem;
-  -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  
-}
-
-.form-control2 {
-  display: block;
-  width: 55%;
-  height: calc(1.5em + 0.75rem + 2px);
-  padding: 0.375rem 1rem;
-  font-size: 0.875rem;
-  font-weight: 400;
-  line-height: 1.5;
-  /* color: #282828; */
-  color: #000000;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #fff;
-  border-radius: 0.5rem;
-  -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  /* margin-left: 35em; */
-  
-}
-/* @media (prefers-reduced-motion: reduce) { */
-  /* .form-control { */
-    /* -webkit-transition: none; */
-    /* transition: none; */
-  /* } */
-/* } */
-
-/* .form-control::-ms-expand { */
-  /* background-color: transparent; */
-  /* border: 0; */
-/* } */
-
-/* .form-control:-moz-focusring { */
-  /* color: transparent; */
-  /* text-shadow: 0 0 0 #282828; */
-/* } */
-
-.form-control:focus {
-  color: #282828;
-  background-color: #fff;
-  border-color: #95cfeb;
-  outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(42, 159, 214, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(42, 159, 214, 0.25);
-}
-
-.form-control2:focus {
-  color: #282828;
-  background-color: #fff;
-  border-color: #95cfeb;
-  outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(42, 159, 214, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(42, 159, 214, 0.25);
-}
-
-/* .form-control::-webkit-input-placeholder { */
-  /* color: #555; */
-  /* opacity: 1; */
-/* } */
-
-/* .form-control::-ms-input-placeholder { */
-  /* color: #555; */
-  /* opacity: 1; */
-/* } */
-
-/* .form-control::placeholder { */
-  /* color: #555; */
-  /* opacity: 1; */
-/* } */
-
-/* .form-control:disabled, .form-control[readonly] { */
-  /* background-color: #ADAFAE; */
-  /* opacity: 1; */
-/* } */
-
-/* select.form-control:focus::-ms-value { */
-  /* color: #282828; */
-  /* background-color: #fff; */
-/* } */
-a, p {
-	font-size: 1.5rem;
-	color: #FFFFFF;
-}
-
-
-
-/* CSS for radio buttons */
-
-
-.custom-control-input {
-  position: absolute;
-  left: 0;
-  z-index: -1;
-  width: 1rem;
-  height: 1.15625rem;
-  opacity: 0;
-}
-
-.custom-control-input:checked ~ .custom-control-label::before {
-  color: #fff;
-  border-color: #2A9FD6;
-  background-color: #2A9FD6;
-}
-
-.custom-control-input:focus ~ .custom-control-label::before {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(42, 159, 214, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(42, 159, 214, 0.25);
-}
-
-.custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #95cfeb;
-}
-
-.custom-control-input:not(:disabled):active ~ .custom-control-label::before {
-  color: #fff;
-  background-color: #c0e2f3;
-  border-color: #c0e2f3;
-}
-
-.custom-control-input[disabled] ~ .custom-control-label, .custom-control-input:disabled ~ .custom-control-label {
-  color: #555;
-}
-
-.custom-control-input[disabled] ~ .custom-control-label::before, .custom-control-input:disabled ~ .custom-control-label::before {
-  background-color: #ADAFAE;
-}
-
-.custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
-}
-
-.custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #2A9FD6;
-  background-color: #2A9FD6;
-}
-
-.custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e");
-}
-
-.custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(42, 159, 214, 0.5);
-}
-
-.custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(42, 159, 214, 0.5);
-}
-
-.custom-radio .custom-control-label::before {
-  border-radius: 50%;
-}
-
-.custom-radio .custom-control-input:checked ~ .custom-control-label::after {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
-}
-
-.custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(42, 159, 214, 0.5);
 }
