--- a/client/src/css/MainSearch.css
+++ b/client/src/css/MainSearch.css
@@ -1,9 +1,6 @@
-/* #search { */
-	/* margin-left: 2.5em; */
-	/* margin-right: 2.5em; */
-/* } */
 
-.form-control2 {
+
+.form-search {
   display: block;
   width: 40%;
   height: calc(1.5em + 0.75rem + 2px);
@@ -25,7 +22,7 @@
 }
 
 
-.form-control2:focus {
+.form-search:focus {
    color: #90EE90;
   background-color: #fff;
   border-color: #90EE79;
