--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -99,7 +99,7 @@ body {
   color: #FFFFFF; 
   text-align: left;
   background-color: #90EE90;
-   background-image: linear-gradient(to right, #90EE90, #00FF00); 
+   /* background-image: linear-gradient(to right, #90EE90, #268e04);  */
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -111,7 +111,7 @@ hr {
           box-sizing: content-box;
   height: 0;
   overflow: visible;
-  color: #00FF00;
+  color: #268e04;
   
 }
 
@@ -132,11 +132,12 @@ a {
 
 #me {
 	background-color: #FFFFFF;
-	color: #00FF00;
+	color: #268e04;
 	border-radius: 2.5rem;
 }
 
 h1 {
+	margin-top: 7.5%;
 	font-size: 10em;
 }
 h3 {
@@ -148,7 +149,7 @@ h3 {
 
 button:hover {
   color: #fff;
-  background-color: #00FF00;
+  background-color: #268e04;
   border-color: white;
 }
 
@@ -156,8 +157,8 @@ button:focus, button.focus {
   color: #fff;
   background-color: #90EE90;
   border-color: #90EE79;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 255, 0, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 255, 0, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem 268e04;
+          box-shadow: 0 0 0 0.2rem 268e04;
 }
 
 button {
@@ -205,15 +206,15 @@ button {
 }
 
 #logOut:hover {
-  color: #2A9FD6;
+  color: #268e04;
 }
 
 #logOut:focus, #logOut.focus {
   color: #fff;
   background-color: #90EE90;
   border-color: #90EE79;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 255, 0, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 255, 0, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem 268e04;
+          box-shadow: 0 0 0 0.2rem 268e04;
 }
 
 #logOut {
