--- a/client/src/css/MainSearch.css
+++ b/client/src/css/MainSearch.css
@@ -8,7 +8,7 @@
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #90EE90;
+  color: #268e04;
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #fff;
@@ -23,7 +23,7 @@
 
 
 .form-search:focus {
-   color: #90EE90;
+   color: #268e04;
   background-color: #fff;
   border-color: #90EE79;
   outline: 0;
