--- a/client/src/css/Register.css
+++ b/client/src/css/Register.css
@@ -70,7 +70,7 @@ button-group > button:focus, button-group > button:active, button-group > button
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #90EE90;
+  color: #268e04;
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #fff;
@@ -83,7 +83,7 @@ button-group > button:focus, button-group > button:active, button-group > button
 }
 
 .form-register:focus {
-  color: #90EE90;
+  color: #268e04;
   background-color: #fff;
   border-color: #90EE79;
   outline: 0;
@@ -109,7 +109,7 @@ button-group > button:focus, button-group > button:active, button-group > button
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #90EE90;
+  color: #000;
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #CC0000;
