minor fix of css

--- a/client/src/css/MainSearch.css
+++ b/client/src/css/MainSearch.css
@@ -1,4 +1,4 @@
-@import "http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css";
+@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css";
 
 .form-search {
   display: block;
